force-app/main/default/objects/PM_EXPENSE_SHEET_DT__x/PM_EXPENSE_SHEET_DT__x.object-meta.xml
<CustomObject>
    <description>PM_EXPENSE_SHEET_DT</description>
    <externalDataSource>WCGT_Integration</externalDataSource>
    <externalName>PM_EXPENSE_SHEET_DT</externalName>
    <label>PM_EXPENSE_SHEET_DT</label>
    <pluralLabel>PM_EXPENSE_SHEET_DT</pluralLabel>
</CustomObject>