force-app/main/default/objects/PM_EXPENSE_SHEET_DT__x/fields/ACTIVITY__c.field-meta.xml
<CustomField>
    <fullName>ACTIVITY__c</fullName>
    <description>ACTIVITY</description>
    <externalDeveloperName>ACTIVITY</externalDeveloperName>
    <label>ACTIVITY</label>
    <length>8</length>
    <type>Text</type>
</CustomField>