force-app/main/default/objects/PM_EXPENSE_SHEET_DT__x/fields/AUTO__c.field-meta.xml
<CustomField>
    <fullName>AUTO__c</fullName>
    <description>AUTO</description>
    <externalDeveloperName>AUTO</externalDeveloperName>
    <label>AUTO</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>