force-app/main/default/objects/PM_EXPENSE_SHEET_DT__x/fields/BANK_CHARGES__c.field-meta.xml
<CustomField>
    <fullName>BANK_CHARGES__c</fullName>
    <description>BANK_CHARGES</description>
    <externalDeveloperName>BANK_CHARGES</externalDeveloperName>
    <label>BANK_CHARGES</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>