force-app/main/default/objects/PM_EXPENSE_SHEET_DT__x/fields/BOOKING__c.field-meta.xml
<CustomField>
    <fullName>BOOKING__c</fullName>
    <description>BOOKING</description>
    <externalDeveloperName>BOOKING</externalDeveloperName>
    <label>BOOKING</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>