force-app/main/default/objects/PM_EXPENSE_SHEET_DT__x/fields/CURR_AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>CURR_AMOUNT__c</fullName>
    <description>CURR_AMOUNT</description>
    <externalDeveloperName>CURR_AMOUNT</externalDeveloperName>
    <label>CURR_AMOUNT</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>