force-app/main/default/objects/PM_EXPENSE_SHEET_DT__x/fields/ESTIMATE_AMT__c.field-meta.xml
<CustomField>
    <fullName>ESTIMATE_AMT__c</fullName>
    <description>ESTIMATE_AMT</description>
    <externalDeveloperName>ESTIMATE_AMT</externalDeveloperName>
    <label>ESTIMATE_AMT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>