force-app/main/default/objects/PM_EXPENSE_SHEET_DT__x/fields/EXCH_RATE__c.field-meta.xml
<CustomField>
    <fullName>EXCH_RATE__c</fullName>
    <description>EXCH_RATE</description>
    <externalDeveloperName>EXCH_RATE</externalDeveloperName>
    <label>EXCH_RATE</label>
    <precision>11</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>