force-app/main/default/objects/PM_EXPENSE_SHEET_DT__x/fields/EXP_AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>EXP_AMOUNT__c</fullName>
    <description>EXP_AMOUNT</description>
    <externalDeveloperName>EXP_AMOUNT</externalDeveloperName>
    <label>EXP_AMOUNT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>