force-app/main/default/objects/PM_EXPENSE_SHEET_DT__x/fields/EXP_DATE__c.field-meta.xml
<CustomField>
    <fullName>EXP_DATE__c</fullName>
    <description>EXP_DATE</description>
    <externalDeveloperName>EXP_DATE</externalDeveloperName>
    <label>EXP_DATE</label>
    <type>DateTime</type>
</CustomField>