force-app/main/default/objects/PM_EXPENSE_SHEET_DT__x/fields/EXP_REMARKS__c.field-meta.xml
<CustomField>
    <fullName>EXP_REMARKS__c</fullName>
    <description>EXP_REMARKS</description>
    <externalDeveloperName>EXP_REMARKS</externalDeveloperName>
    <label>EXP_REMARKS</label>
    <length>200</length>
    <type>Text</type>
</CustomField>