force-app/main/default/objects/PM_EXPENSE_SHEET_DT__x/fields/EXP_STATUS__c.field-meta.xml
<CustomField>
    <fullName>EXP_STATUS__c</fullName>
    <description>EXP_STATUS</description>
    <externalDeveloperName>EXP_STATUS</externalDeveloperName>
    <label>EXP_STATUS</label>
    <length>8</length>
    <type>Text</type>
</CustomField>