force-app/main/default/objects/PM_EXPENSE_SHEET_DT__x/fields/FLG_EXP_TYPE__c.field-meta.xml
<CustomField>
    <fullName>FLG_EXP_TYPE__c</fullName>
    <description>FLG_EXP_TYPE</description>
    <externalDeveloperName>FLG_EXP_TYPE</externalDeveloperName>
    <label>FLG_EXP_TYPE</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>