force-app/main/default/objects/PM_EXPENSE_SHEET_DT__x/fields/FOREX_TYPE__c.field-meta.xml
<CustomField>
    <fullName>FOREX_TYPE__c</fullName>
    <description>FOREX_TYPE</description>
    <externalDeveloperName>FOREX_TYPE</externalDeveloperName>
    <label>FOREX_TYPE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>