force-app/main/default/objects/PM_EXPENSE_SHEET_DT__x/fields/FROM_PLACE__c.field-meta.xml
<CustomField>
    <fullName>FROM_PLACE__c</fullName>
    <description>FROM_PLACE</description>
    <externalDeveloperName>FROM_PLACE</externalDeveloperName>
    <label>FROM_PLACE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>