force-app/main/default/objects/PM_EXPENSE_SHEET_DT__x/fields/ITEM_DESC__c.field-meta.xml
<CustomField>
    <fullName>ITEM_DESC__c</fullName>
    <description>ITEM_DESC</description>
    <externalDeveloperName>ITEM_DESC</externalDeveloperName>
    <label>ITEM_DESC</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>