force-app/main/default/objects/PM_EXPENSE_SHEET_DT__x/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <label>Job</label>
    <length>255</length>
    <referenceTargetField>Job__c.WCGTProjectID__c</referenceTargetField>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>PM_EXPENSE_SHEET_DT</relationshipLabel>
    <relationshipName>PM_EXPENSE_SHEET_DT</relationshipName>
    <type>IndirectLookup</type>
</CustomField>