force-app/main/default/objects/PM_EXPENSE_SHEET_DT__x/fields/KK_TAX__c.field-meta.xml
<CustomField>
    <fullName>KK_TAX__c</fullName>
    <description>KK_TAX</description>
    <externalDeveloperName>KK_TAX</externalDeveloperName>
    <label>KK_TAX</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>