force-app/main/default/objects/PM_EXPENSE_SHEET_DT__x/fields/MODE_TYPE__c.field-meta.xml
<CustomField>
    <fullName>MODE_TYPE__c</fullName>
    <description>MODE_TYPE</description>
    <externalDeveloperName>MODE_TYPE</externalDeveloperName>
    <label>MODE_TYPE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>