force-app/main/default/objects/PM_EXPENSE_SHEET_DT__x/fields/NEW_EXPENSES__c.field-meta.xml
<CustomField>
    <fullName>NEW_EXPENSES__c</fullName>
    <description>NEW_EXPENSES</description>
    <externalDeveloperName>NEW_EXPENSES</externalDeveloperName>
    <label>NEW_EXPENSES</label>
    <length>8</length>
    <type>Text</type>
</CustomField>