force-app/main/default/objects/PM_EXPENSE_SHEET_DT__x/fields/NOT_SETTLE_REASON__c.field-meta.xml
<CustomField>
    <fullName>NOT_SETTLE_REASON__c</fullName>
    <description>NOT_SETTLE_REASON</description>
    <externalDeveloperName>NOT_SETTLE_REASON</externalDeveloperName>
    <label>NOT_SETTLE_REASON</label>
    <length>700</length>
    <type>LongTextArea</type>
</CustomField>