force-app/main/default/objects/PM_EXPENSE_SHEET_DT__x/fields/REJECT_AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>REJECT_AMOUNT__c</fullName>
    <description>REJECT_AMOUNT</description>
    <externalDeveloperName>REJECT_AMOUNT</externalDeveloperName>
    <label>REJECT_AMOUNT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>