force-app/main/default/objects/PM_EXPENSE_SHEET_DT__x/fields/SAC_CODE__c.field-meta.xml
<CustomField>
    <fullName>SAC_CODE__c</fullName>
    <description>SAC_CODE</description>
    <externalDeveloperName>SAC_CODE</externalDeveloperName>
    <label>SAC_CODE</label>
    <length>100</length>
    <type>Text</type>
</CustomField>