force-app/main/default/objects/PM_EXPENSE_SHEET_DT__x/fields/SB_TAX_IN__c.field-meta.xml
<CustomField>
    <fullName>SB_TAX_IN__c</fullName>
    <description>SB_TAX_IN</description>
    <externalDeveloperName>SB_TAX_IN</externalDeveloperName>
    <label>SB_TAX_IN</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>