force-app/main/default/objects/PM_EXPENSE_SHEET_DT__x/fields/SERVICE_TAX_IN__c.field-meta.xml
<CustomField>
    <fullName>SERVICE_TAX_IN__c</fullName>
    <description>SERVICE_TAX_IN</description>
    <externalDeveloperName>SERVICE_TAX_IN</externalDeveloperName>
    <label>SERVICE_TAX_IN</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>