force-app/main/default/objects/PM_EXPENSE_SHEET_DT__x/fields/SETTLE_AMT__c.field-meta.xml
<CustomField>
    <fullName>SETTLE_AMT__c</fullName>
    <description>SETTLE_AMT</description>
    <externalDeveloperName>SETTLE_AMT</externalDeveloperName>
    <label>SETTLE_AMT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>