force-app/main/default/objects/PM_EXPENSE_SHEET_DT__x/fields/SUPPORTING_ATTACHED__c.field-meta.xml
<CustomField>
    <fullName>SUPPORTING_ATTACHED__c</fullName>
    <description>SUPPORTING_ATTACHED</description>
    <externalDeveloperName>SUPPORTING_ATTACHED</externalDeveloperName>
    <label>SUPPORTING_ATTACHED</label>
    <length>1</length>
    <type>Text</type>
</CustomField>