force-app/main/default/objects/PM_EXPENSE_SHEET_DT__x/fields/TAX_CATEGORY__c.field-meta.xml
<CustomField>
    <fullName>TAX_CATEGORY__c</fullName>
    <description>TAX_CATEGORY</description>
    <externalDeveloperName>TAX_CATEGORY</externalDeveloperName>
    <label>TAX_CATEGORY</label>
    <length>8</length>
    <type>Text</type>
</CustomField>