force-app/main/default/objects/PM_EXPENSE_SHEET_DT__x/fields/TIME_SHEET_HD__c.field-meta.xml
<CustomField>
    <fullName>TIME_SHEET_HD__c</fullName>
    <externalDeveloperName>PROJECT_ID</externalDeveloperName>
    <label>TIME_SHEET_HD</label>
    <length>255</length>
    <referenceTo>TIME_SHEET_HD__x</referenceTo>
    <relationshipLabel>PM_EXPENSE_SHEET_DT</relationshipLabel>
    <relationshipName>PM_EXPENSE_SHEET_DT</relationshipName>
    <type>ExternalLookup</type>
</CustomField>