force-app/main/default/objects/PM_EXPENSE_SHEET_DT__x/fields/TO_PLACE__c.field-meta.xml
<CustomField>
    <fullName>TO_PLACE__c</fullName>
    <description>TO_PLACE</description>
    <externalDeveloperName>TO_PLACE</externalDeveloperName>
    <label>TO_PLACE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>